# note_reader

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  note_reader  note_reader.cpp  notes.txt
